--- a/Statistics_Oct20.ipynb
+++ b/Statistics_Oct20.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,18 +15,8 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/madanjha/PythonDS/blob/main/Statistics_Oct20.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "s6Md--LRVzCa"
       },
@@ -45,7 +34,7 @@
       "metadata": {
         "id": "QfIA0jjIWfrh"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -56,7 +45,7 @@
       "metadata": {
         "id": "E-w1dTp0WCk9"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -73,7 +62,7 @@
       "metadata": {
         "id": "hcuIcvvFWGkI"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -88,7 +77,7 @@
         "id": "6GX01kAXWe3-",
         "outputId": "88576b4c-73ba-4a80-c78f-abf232acbad8"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -120,7 +109,7 @@
       "metadata": {
         "id": "t1GNESD4Wj_-"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -136,7 +125,7 @@
         "id": "qS6jVEelXfPJ",
         "outputId": "45641799-a546-48a0-8f6e-b39bf529cedb"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -442,7 +431,7 @@
         "id": "DQc9zC2IXhrB",
         "outputId": "a6b9af44-f352-4126-a1ff-fc8c116546d1"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -464,7 +453,7 @@
       "metadata": {
         "id": "Zsnk_Ak5X_xP"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -479,7 +468,7 @@
         "id": "6U9fY4btpaqS",
         "outputId": "8f09d3b6-1755-4e78-e206-6a1708463302"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -505,7 +494,7 @@
         "id": "plCgvjLjo13b",
         "outputId": "39314687-515c-4118-8c8b-d796fdc7dcb7"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -527,7 +516,7 @@
       "metadata": {
         "id": "l424bX1xo5AE"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -542,7 +531,7 @@
         "id": "v7Cx_J-XqQGf",
         "outputId": "5387aaeb-83b2-48c8-8679-b2fb5c8d1605"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -573,7 +562,7 @@
       "metadata": {
         "id": "YT9AC8YPqTsi"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -588,7 +577,7 @@
         "id": "YetQNTclt6P3",
         "outputId": "c418db84-5e9f-474f-c3f7-b2247d652b7c"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -610,7 +599,7 @@
       "metadata": {
         "id": "XflKfQXXt7J2"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -625,7 +614,7 @@
         "id": "L93OGSiBt_hM",
         "outputId": "836cb0e4-c2ac-474d-8e5f-1a613e7ed2df"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -647,7 +636,7 @@
       "metadata": {
         "id": "urY8nxhRuAdc"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -658,7 +647,7 @@
       "metadata": {
         "id": "jn-3Wh8zuVlx"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -675,7 +664,7 @@
         "id": "2_0iKw2EuZgD",
         "outputId": "25c3e669-c08f-4dce-d564-e5d770bb644f"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "display_data",
@@ -697,7 +686,7 @@
       "metadata": {
         "id": "1aC9oh7KucXQ"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -708,7 +697,7 @@
       "metadata": {
         "id": "cIZhqGHdu2Mi"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -719,7 +708,7 @@
       "metadata": {
         "id": "9qrtICfHvD5X"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -730,7 +719,7 @@
       "metadata": {
         "id": "wIj8wGZ2vJq6"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -745,7 +734,7 @@
         "id": "nGvNKtEsvP4X",
         "outputId": "6b8522d6-2850-4340-b260-55d4b8ac4b17"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -767,7 +756,7 @@
       "metadata": {
         "id": "fpOWkFE7vQgs"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -779,7 +768,7 @@
       "metadata": {
         "id": "rgPebK0Mvg93"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -794,7 +783,7 @@
         "id": "9lco7qhyvq7q",
         "outputId": "38da1af1-87a3-4491-f36b-8ccf7f7aa708"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -820,7 +809,7 @@
         "id": "oto7zgh2vsos",
         "outputId": "9232456c-c7d6-4e23-8f9d-528edd1aacb5"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -850,7 +839,7 @@
         "id": "Eben7FT-vtRk",
         "outputId": "85b780ab-8354-4134-f2f5-2930e8fab935"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -872,7 +861,7 @@
       "metadata": {
         "id": "XSpbt-s4wNVo"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -888,7 +877,7 @@
         "id": "_xT1DGYE0txi",
         "outputId": "e45e3fa2-60d7-423a-ff17-da791da6261f"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1544,7 +1533,7 @@
       "metadata": {
         "id": "IaRh5P8201N7"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -1555,7 +1544,7 @@
       "metadata": {
         "id": "rBN3Y1MN0uPU"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -1572,7 +1561,7 @@
         "id": "aR8Mj1IW0zUl",
         "outputId": "cd99b9c1-0764-4ab4-a079-d6a1da26f0b9"
       },
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1617,7 +1606,7 @@
       "metadata": {
         "id": "37hCryDX05lN"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -1636,7 +1625,7 @@
         "id": "dGtfFdse2AMe",
         "outputId": "7904c5fb-29ca-4a7a-ea97-5a2f047bb6a5"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1666,7 +1655,7 @@
         "id": "Rw6IsP992KZ_",
         "outputId": "518ee7bb-27dd-4a50-85e0-99a78a087291"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1694,7 +1683,7 @@
         "id": "OXUcwyhh3Y9L",
         "outputId": "ec484dd6-99a3-420a-a84d-a2aee8731bcb"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1724,7 +1713,7 @@
         "id": "AUodcZkK34RT",
         "outputId": "98eace33-e30e-4fa8-f0c9-855c6ad75a55"
       },
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1751,7 +1740,7 @@
         "id": "TKLv3WC74DNf",
         "outputId": "958bbcf5-6f8a-4946-e606-a1a205fa4d0b"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
